# OTA-Adaptive-AUTOSAR-Project

./: .gitignore  CMakeLists.txt  PackageManagerSkeleton.hpp  README.md  UpdateRequestSkeleton.hpp  requirments.sh  terminate_process.sh
Adaptive Platform Notes/: StudyLinks.txt
Package/Car_GUI/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.0b026b9  CMakeLists.txt.user.4001fe7  commands.h  main.cpp  mainwindow.cpp  mainwindow.h
Package/Sw_Package/: SwPackageManifest.json
Package/Sw_Package/SoftwareCluster/: SwClusterManifest.json
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  Car_GUI  build.ninja  cmake_install.cmake  qtcsettings.cmake
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/Car_GUI_autogen/: deps
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/execution_lib_autogen/: deps
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  Car_GUI  build.ninja  cmake_install.cmake  qtcsettings.cmake
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-Release/Car_GUI_autogen/: deps
Package/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-Release/execution_lib_autogen/: deps
PackageUpdate/Car_GUI/: CMakeLists.txt  CMakeLists.txt.user.0b026b9  CarControlImpl.cpp  CarControlImpl.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
PackageUpdate/Sw_Package/: SwPackageManifest.json
PackageUpdate/Sw_Package/Car_GUI5/: SwPackageManifest.json
PackageUpdate/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  Car_GUI  build.ninja  cmake_install.cmake
PackageUpdate/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/Car_GUI_autogen/: deps
PackageUpdate/build-Car_GUI-Desktop_Qt_5_15_2_GCC_64bit-MinSizeRel/execution_lib_autogen/: deps
SecureOTA_System/: datatype.arxml  deployment.arxml  mappings.arxml  service_interfaces.arxml  software_compoenents.arxml
SecureOTA_System/Generator/: Generate.py
SecureOTA_System_Configurations/: datatype.arxml  deployment.arxml  mappings.arxml  processes.arxml  service_interfaces.arxml  software_compoenents.arxml
SecureOTA_System_Configurations/Don't Cares/: executables.arxml
SecureOTA_System_Configurations/GeneratedFiles/: CarControlSkeleton.hpp  PackageManagerProxy.hpp  UpdateRequestProxy.hpp  UpdateRequestSkeleton.hpp  types.hpp
SecureOTA_System_Configurations/Generator/: DataType.py  Deployment.py  Generate.py  Mapping_SwCompounent.py  Service_Interface.py  Service_Interface_old.py  Skel_Prxy_common.py  gnrator_function  main.py  proxy_gen.py  skelaton_gen.py  skeleton_gen.py
SecureOTA_System_Configurations/Generator/Models/: PackageManagerProxy.hpp  PackageManagerSkeleton.hpp  UpdateRequestProxy.hpp  UpdateRequestSkeleton.hpp
SecureOTA_System_Configurations/old_arxml/: deployment.arxml  mappings.arxml
SecureOTA_System_Configurations/update_arxml/: datatype.arxml  deployment.arxml  machines.arxml  mappings.arxml  service_interfaces.arxml  software_compoenents.arxml
Trial/.metadata/: version.ini
Trial/UCM/: UCM_Types.h
Trial/UCM/.metadata/: version.ini
Trial/UCM/executables/: Process_List.json
adaptive_autosar_simulation/: CMakeLists.txt  CMakeLists.txt.user.1d6a9ca  CMakeLists.txt.user.4001fe7  CMakeLists.txt.user.48cec2b  CMakeLists.txt.user.9c561c2  CMakeLists.txt.user.cf2ff01  Makefile  cmake_install.cmake  com.cpp  com.h  exec.cpp  exec.h  iam.cpp  iam.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ota.cpp  ota.h  ota_tab.cpp  ota_tab.h  sd.cpp  sd.h  service_discovery.cpp  service_discovery.h  simulation.cpp  simulation.hpp  sm.cpp  sm.h  sm_tab.cpp  sm_tab.h  ucm.cpp  ucm.h  ucm_tab.cpp  ucm_tab.h
adaptive_autosar_simulation/adaptive_autosar_simulation_autogen/: mocs_compilation.cpp
adaptive_autosar_simulation/adaptive_autosar_simulation_autogen/EWIEGA46WW/: moc_com.cpp  moc_mainwindow.cpp  moc_sd.cpp
ara/: .project  COMTEST  COM_CLIENT_TEST  COM_SERVER_TEST
ara/AppClient/: AppProxy.hpp  Client_main.cpp
ara/Client/: TestProxy.hpp  main.cpp
ara/IAM/include/: Grant.hpp  (+5 more)
ara/Server/: TestSkeleton.hpp  main.cpp
ara/com/: GUI_Report.cpp  UpdateRequestImpl.cpp  UpdateRequestImpl.hpp  UpdateRequestProxy.hpp  UpdateRequestSkeleton.hpp  proxy_test.cpp  proxymethods.hpp  types.hpp
ara/core/: types.hpp
ara/exec/: em.cpp  em.h  em.json  executable.cpp  executable.h  execution_client.cpp  execution_client.h  function_group.cpp  function_group.h  function_group_state.cpp  process.cpp  process.h  state_client.cpp  state_client.h
ara/iam/: GrantStorage.json
ara/log/: log.hpp
ara/sm/: SM.cpp  SM.hpp  UpdateRequestSkeleton.hpp  main.cpp  sm  sm.json  sm_logger.cpp  sm_logger.hpp  types.hpp
ara/ucm/: ActionsLog.txt  State.cpp  Storage.cpp  Transfer.cpp  ucm_main.cpp
build-adaptive_autosar_simulation-Desktop-Debug/: 0  2  3  4  5  CMakeCache.txt  Makefile  adaptive_autosar_simulation.cbp  cmake_install.cmake  file2.json
build-adaptive_autosar_simulation-Desktop-Debug/adaptive_autosar_simulation_autogen/: mocs_compilation.cpp
build-adaptive_autosar_simulation-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  adaptive_autosar_simulation  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-adaptive_autosar_simulation-Desktop_Qt_5_15_2_GCC_64bit-Debug/adaptive_autosar_simulation_autogen/: deps  mocs_compilation.cpp
build-adaptive_autosar_simulation-Desktop_Qt_5_15_2_GCC_64bit-Debug/jsoncpp_lib_autogen/: deps
etc/: systemProcess_List.json
etc/system/: Process_List.json  machine_manifest.json
executables/: Process_List.json
executables/ex1/: ex1.out
executables/ucm/: ActionsLog.txt  ucm.cpp
simulation/: mainwindow.cpp  mainwindow.h  mainwindow.ui  simulation.cpp  simulator_new.pro  sm.json
sm/: SM.hpp  main.cpp
update_arxml/: datatype.arxml  deployment.arxml  mappings.arxml  service_interfaces.arxml  software_compoenents.arxml
utility/: general.hpp
utility/Theme/: Diffnes.qss  SpyBot1.qss  SpyBot2.qss
utility/serialization/: serialization_simple.hpp
(+470 files in other folders)
